# autonomy

./: Cargo.toml  PLAN.md  README.md  visualization.html
docs/: roadmap.md  solution.md
simulation-engine/: Cargo.toml  build.rs
simulation-engine/src/: lib.rs  main.rs
simulation-engine/src/civilization/: culture.rs  defense.rs  hierarchy.rs  mod.rs  neat.rs  settlement.rs  trade.rs
simulation-engine/src/components/: action.rs  behavior_tree.rs  bt_ops.rs  composite.rs  drives.rs  genome.rs  identity.rs  memory.rs  mod.rs  perception.rs  physical.rs  social.rs  spatial.rs  tribe.rs  world_object.rs
simulation-engine/src/core/: config.rs  lod.rs  mod.rs  perf.rs  rng.rs  snapshot.rs  spawning.rs  tick.rs  world.rs
simulation-engine/src/environment/: chunks.rs  climate.rs  mod.rs  regrowth.rs  resources.rs  signals.rs  spatial_index.rs  spawning.rs  structures.rs  terrain.rs
simulation-engine/src/events/: log.rs  mod.rs  types.rs
simulation-engine/src/narrative/: arcs.rs  biography.rs  mod.rs  significance.rs  tracker.rs
simulation-engine/src/net/: bridge.rs  diff.rs  mod.rs  protocol.rs  server.rs
simulation-engine/src/systems/: aging.rs  agriculture.rs  chunk_manager.rs  cleanup.rs  combat.rs  composite_reproduction.rs  composition.rs  construction.rs  crafting.rs  cultural_transmission.rs  decision.rs  drives.rs  feeding.rs  memory.rs  mod.rs  movement.rs  objects.rs  perception.rs  reproduction.rs  settlement.rs  signals.rs  spatial_rebuild.rs  tribe.rs  wander.rs  war.rs
simulation-engine/tests/: basic_simulation.rs
viewer/: package-lock.json  (+1 more)
(+37 files in other folders)
