[package]
name = "simulation-engine"
version = "0.1.0"
edition = "2021"
description = "Autonomy: emergent life simulation engine"

[dependencies]
hecs = "0.10"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
crossbeam-channel = "0.5"
noise = "0.9"
bincode = "1"
zstd = "0.13"
futures = "0.3"
rayon = "1"
tokio-tungstenite = "0.26"

[build-dependencies]
prost-build = "0.14"
protox = "0.9"

[dev-dependencies]
